--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-rJcm0FCbXS mbr-parallax-background" id="content5-p">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-rJcm0FCbXS mbr-parallax-background" id="content5-p">
 
     
 
